@@ -1,3 +1,8 @@
+2000-03-22  Stefan Monnier  <monnier@cs.yale.edu>
+
+	* regex.c (enum syntaxcode): Provide default for non-Emacs.
+	(re_compile_fastmap, re_match_2_internal): Undo Dave's previous fix.
+
 2000-03-22  Jason Rumney  <jasonr@gnu.org>
 
 	* w32menu.c (single_submenu): Set help string to NULL if none.
